[Cult] Compile a "Main" method
Compilation takes place assuming that the source is located at src/Main.java.